--- a/css/styles.css
+++ b/css/styles.css
@@ -9,6 +9,7 @@
   --fotter-text: #e7e9fc;
   --border-company-color: #8e8f99;
   --footer-hover-icon-color: #31d0aa;
+  --modal-bg-color: #fcfcfc;
 }
 
 /* ***** */
@@ -91,7 +92,8 @@ address {
 
 /* My css */
 
-/* HEADER SECTION */
+/*#region --HEADER SECTION-- */
+
 .header {
   padding-top: 24px;
   padding-bottom: 24px;
@@ -134,6 +136,8 @@ address {
   line-height: 1.5;
   letter-spacing: 0.02em;
   color: var(--color-text);
+  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition-property: color;
 }
 
 .header__navigation-link:hover,
@@ -157,18 +161,105 @@ address {
   gap: 40px;
 }
 
+.header__navigation-item:not(:last-child) {
+  margin-right: 40px;
+}
+.header__navigation-item {
+  position: relative;
+}
 .header__adress-link {
   color: var(--seconari-text-color);
   line-height: 1.5;
   letter-spacing: 0.02em;
 }
+.header__navigation-linkp {
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+  color: var(--color-text);
+}
+.header__navigation-links {
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+  color: var(--color-text);
+}
+.header__navigation-linkp::after {
+  content: '';
+  position: absolute;
+  bottom: -24px;
+  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition-property: background;
+  display: block;
+  width: 0;
+  width: 100%;
+  height: 4px;
+  background-color: var(--portfolio-button-bg-hover-color);
+  border-radius: 2px;
+}
+.header__navigation-linkp {
+  color: var(--portfolio-button-bg-hover-color);
+}
+.header__navigation-links {
+  color: var(--portfolio-button-bg-hover-color);
+}
+.header__navigation-links::after {
+  content: '';
+  position: absolute;
+  bottom: -25px;
+  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition-property: background;
+  display: block;
+  width: 0;
+  width: 100%;
+  height: 4px;
+  background-color: var(--portfolio-button-bg-hover-color);
+  border-radius: 2px;
+}
+.header__navigation-link::after {
+  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition-property: background;
+}
+.header__navigation-linkp:hover,
+.header__navigation-linkp:focus {
+  color: var(--portfolio-button-bg-hover-color);
+  border: var(--portfolio-button-bg-hover-color);
+  border-radius: 2px;
+}
+.header__navigation-link:hover,
+.header__navigation-link:focus {
+  color: var(--portfolio-button-bg-hover-color);
+  border: var(--portfolio-button-bg-hover-color);
+  border-radius: 2px;
+}
+.header__address {
+  margin-left: auto;
+  display: flex;
+}
+.header__address-item:not(:last-child) {
+  margin-right: 40px;
+}
+.address-link {
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+  color: var(--seconari-text-color);
+  font-style: normal;
+}
+.header__adress-link {
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
+  color: var(--seconari-text-color);
+}
 .header__adress-link:hover,
 .header__adress-link:focus {
   color: var(--portfolio-button-bg-hover-color);
 }
+/*#endregion --HEADER SECTION-- */
 
-/* HERO SECTION */
+/*#region --HERO SECTION-- */
 .hero {
   background-color: var(--color-text);
   padding: 188px 0;
@@ -198,6 +289,9 @@ address {
 }
 
 .hero__button {
+  padding: 16px 32px;
+  max-width: 176px;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   font-family: 'Roboto', sans-serif;
   font-weight: 500;
   font-size: 16px;
@@ -208,18 +302,92 @@ address {
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
   border-radius: 4px;
   border-color: transparent;
-  padding: 16px 32px;
+  margin: auto;
   cursor: pointer;
   display: block;
-  margin: 0 auto;
 }
 
 .hero__button:hover,
 .hero__button:focus {
   background-color: var(--portfolio-button-bg-hover-color);
 }
+/*#endregion --HERO SECTION-- */
 
-/* PRIVILAGE SECTION */
+/*#region --MODAL WINDOW-- */
+.backdrop {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  opacity: 1;
+  background-color: rgba(46, 47, 66, 0.4);
+  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.backdrop.is-hidden {
+  opacity: 0;
+  pointer-events: none;
+  visibility: hidden;
+}
+.modal {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  min-width: 408px;
+  height: 576px;
+
+  background-color: var(--modal-bg-color);
+  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 1px 3px rgba(0, 0, 0, 0.12),
+    0px 2px 1px rgba(0, 0, 0, 0.2);
+  border-radius: 4px;
+  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.button-modal {
+  position: absolute;
+  top: 24px;
+  right: 24px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+  width: 24px;
+  height: 24px;
+
+  background-color: var(--head-buttun-fon-color);
+  border: 1px solid rgba(0, 0, 0, 0.1);
+  border-radius: 50%;
+
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.button-modal:hover {
+  fill: var(--bg-color);
+  background-color: var(--portfolio-button-bg-hover-color);
+}
+.visually-hidden {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  border: 0;
+  padding: 0;
+
+  white-space: nowrap;
+  clip-path: inset(100%);
+  clip: rect(0 0 0 0);
+  overflow: hidden;
+}
+.section {
+  padding-top: 120px;
+  padding-bottom: 120px;
+}
+/*#endregion --MODAL WINDOW-- */
+
+/*#region --PRIVILAGE SECTION-- */
 .privilage__list {
   display: flex;
   gap: 24px;
@@ -227,6 +395,10 @@ address {
 
 .privilage__item {
   width: calc((100% - 3 * 24px) / 4);
+}
+.privilage__item:not(:last-child) {
+  margin-right: 24px;
+  min-width: 264px;
 }
 
 .privilage__item::before {
@@ -270,8 +442,9 @@ address {
   letter-spacing: 0.02em;
   color: var(--seconari-text-color);
 }
+/*#endregion --PRIVILAGE SECTION-- */
 
-/*SECTION WHAT */
+/*#region --SECTION WHAT-- */
 
 .what {
   padding-top: 0;
@@ -298,8 +471,9 @@ address {
 .section__what-photo {
   display: block;
 }
+/*#endregion --SECTION WHAT-- */
 
-/* SECTION TEAM */
+/*#region --SECTION TEAM-- */
 .section__team {
   background-color: var(--bg-color-fon-team);
   padding-top: 120px;
@@ -383,8 +557,9 @@ address {
   letter-spacing: 0.02em;
   color: var(--seconari-text-color);
 }
+/*#endregion --SECTION TEAM--*/
 
-/*------------------- SECTION CUSTOMERS ----------------------> */
+/*#region --SECTION CUSTOMERS-- */
 
 .customers {
   background-color: var(--bg-color);
@@ -432,8 +607,9 @@ address {
   border-color: var(--portfolio-button-bg-hover-color);
   color: var(--portfolio-button-bg-hover-color);
 }
+/*#endregion-- SECTION CUSTOMERS --*/
 
-/* ---------------PORTFOLIO PAGE------------------ */
+/*#region --PORTFOLIO PAGE-- */
 .portfolio__section {
   padding-top: 96px;
 }
@@ -468,6 +644,10 @@ address {
   cursor: pointer;
   display: flex;
   padding: 12px 24px;
+  transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .section__button:hover,
@@ -478,6 +658,15 @@ address {
   box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 2px 1px rgba(0, 0, 0, 0.08),
     0px 2px 2px rgba(0, 0, 0, 0.12);
 }
+.section__button-list {
+  flex-wrap: wrap;
+  margin-left: auto;
+  justify-content: center;
+}
+.section__button-item:not(:last-child) {
+  margin-right: 24px;
+}
+
 .portfolio__section-list {
   list-style: none;
   display: flex;
@@ -526,8 +715,41 @@ address {
   letter-spacing: 0.02em;
   color: var(--seconari-text-color);
 }
+/*#region --OVERLAY-- */
+.blok {
+  position: relative;
+  overflow: hidden;
+}
+.product-owerlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
 
-/* ---------------FOOTER SECTION-------------------- */
+  transform: translateY(100%);
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  background-color: var(--logo-color-top);
+}
+.portfolio__section-link:hover .product-owerlay {
+  transform: translateY(0%);
+}
+.owerlay-text {
+  position: absolute;
+  top: 40px;
+  right: 32px;
+  left: 32px;
+
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+  color: var(--bg-color-fon-team);
+}
+
+/*#endregion --OWERLAY-- */
+/*#endregion --PORTFOLIO PAGE-- */
+
+/*#region --FOOTER SECTION-- */
 
 .footer {
   background-color: var(--color-text);
@@ -604,3 +826,4 @@ address {
 .links:focus {
   background-color: var(--footer-hover-icon-color);
 }
+/*#endregion --FOOTER SECTION-- */
