--- a/css/styles.css
+++ b/css/styles.css
@@ -160,9 +160,6 @@ address {
   gap: 40px;
 }
 
-.header__navigation-item:not(:last-child) {
-  margin-right: 40px;
-}
 .header__navigation-item {
   position: relative;
 }
@@ -237,9 +234,7 @@ address {
   margin-left: auto;
   display: flex;
 }
-.header__address-item:not(:last-child) {
-  margin-right: 40px;
-}
+
 .address-link {
   font-size: 16px;
   line-height: 1.5;
@@ -678,7 +673,7 @@ address {
 
 .portfolio__section-link {
   display: block;
-  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .portfolio__section-link:hover,
 .portfolio__section-link:focus {
